slideshow's close, just dealing with a z-index issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1810,68 +1810,64 @@ a:hover {
     padding: 0 15px;
   }
 }
-/* line 125, ../scss/custom.scss */
-.main-content table, .main-content tbody, .main-content td, .main-content tr {
-  border: 0 !important;
-}
 
-/* line 130, ../scss/custom.scss */
+/* line 126, ../scss/custom.scss */
 .main-content-inner {
   padding-bottom: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 133, ../scss/custom.scss */
+  /* line 129, ../scss/custom.scss */
   .main-content-inner .col-sm-6 {
     padding: 0;
   }
 }
 
-/* line 141, ../scss/custom.scss */
+/* line 137, ../scss/custom.scss */
 .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
   margin: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 141, ../scss/custom.scss */
+  /* line 137, ../scss/custom.scss */
   .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
     margin: 10px;
   }
 }
 
-/* line 148, ../scss/custom.scss */
+/* line 144, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 148, ../scss/custom.scss */
+  /* line 144, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 159, ../scss/custom.scss */
+/* line 155, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 156, ../scss/custom.scss */
+  /* line 152, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 166, ../scss/custom.scss */
+  /* line 162, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 172, ../scss/custom.scss */
+/* line 168, ../scss/custom.scss */
 .search, .error404 {
   padding: 60px;
 }
 
-/* line 176, ../scss/custom.scss */
+/* line 172, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1879,67 +1875,67 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 183, ../scss/custom.scss */
+/* line 179, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 188, ../scss/custom.scss */
+/* line 184, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 183, ../scss/custom.scss */
+  /* line 179, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 183, ../scss/custom.scss */
+  /* line 179, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 203, ../scss/custom.scss */
+/* line 199, ../scss/custom.scss */
 .fa-desktop {
   line-height: 21px;
 }
 
-/* line 206, ../scss/custom.scss */
+/* line 202, ../scss/custom.scss */
 .fa-globe {
   line-height: 19px;
 }
 
-/* line 209, ../scss/custom.scss */
+/* line 205, ../scss/custom.scss */
 .fa-responsive {
   margin-right: 5px;
 }
 
-/* line 216, ../scss/custom.scss */
+/* line 212, ../scss/custom.scss */
 .sidebar {
   padding: 10px 30px;
   margin-top: 20px;
   background-color: black;
 }
 @media only all and (max-width: 991px) {
-  /* line 216, ../scss/custom.scss */
+  /* line 212, ../scss/custom.scss */
   .sidebar {
     padding: 0;
   }
 }
-/* line 225, ../scss/custom.scss */
+/* line 221, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 229, ../scss/custom.scss */
+/* line 225, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
 
-/* line 237, ../scss/custom.scss */
+/* line 233, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
@@ -1947,7 +1943,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 248, ../scss/custom.scss */
+/* line 244, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
